WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188373
[Wi-Fi Assertions] suspendWiFiAssertions() should be able to delay sending ProcessReadyToSuspend
https://bugs.webkit.org/show_bug.cgi?id=188373
Summary
[Wi-Fi Assertions] suspendWiFiAssertions() should be able to delay sending Pr...
Andy Estes
Reported
2018-08-06 21:34:34 PDT
NetworkProcess::platformPrepareToSuspend() should take a completion handler
Attachments
Patch
(5.34 KB, patch)
2018-08-06 21:38 PDT
,
Andy Estes
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2018-08-06 21:36:04 PDT
rdar://problem/42857398
Andy Estes
Comment 2
2018-08-06 21:38:31 PDT
Created
attachment 346684
[details]
Patch
Andy Estes
Comment 3
2018-08-07 09:08:56 PDT
Committed
r234651
: <
https://trac.webkit.org/changeset/234651
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug