Source/WebKit/NetworkProcess/cocoa/NetworkProcessCocoa.mm
@@ -243,10 +243,12 @@ void NetworkProcess::platformSyncAllCookies(CompletionHandler<void()>&& completi
 #pragma clang diagnostic pop
 }
 
-void NetworkProcess::platformPrepareToSuspend()
+void NetworkProcess::platformPrepareToSuspend(CompletionHandler<void()>&& completionHandler)
 {
 #if ENABLE(WIFI_ASSERTIONS)
-    suspendWiFiAssertions(SuspensionReason::ProcessSuspending);
+    suspendWiFiAssertions(SuspensionReason::ProcessSuspending, WTFMove(completionHandler));
+#else
+    completionHandler();
 #endif
 }
 
@@ -260,10 +262,10 @@ void NetworkProcess::platformProcessDidResume()
 void NetworkProcess::platformProcessDidTransitionToBackground()
 {
 #if ENABLE(WIFI_ASSERTIONS)
-    suspendWiFiAssertions(SuspensionReason::ProcessBackgrounding);
+    suspendWiFiAssertions(SuspensionReason::ProcessBackgrounding, [] { });
 #endif
 }
-    
+
 void NetworkProcess::platformProcessDidTransitionToForeground()
 {
 #if ENABLE(WIFI_ASSERTIONS)
